--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -1,9 +1,9 @@
 <div class='mt-4'>
-  <span><%= link_to shout.user.username, user_path(shout.user) %></span>
-  <span><%= shout.content.body %></span>
-  <span>
-    <%= link_to shout_path(shout) do %>
-      <%= time_ago_in_words(shout.created_at) %> ago
-    <% end %>
-  </span>
+  <%= link_to shout.user.username, user_path(shout.user) %>
+  <%= render shout.content, content: shout.content %>
+
+  <%= link_to shout_path(shout) do %>
+    <%= time_ago_in_words(shout.created_at) %> ago
+  <% end %>
+
 </div>
