--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -41,6 +41,16 @@
   </div>
 <% end %>
 
+<h3>Avatar</h3>
+
+<%= user_avatar_profile(resource) %>
+
+<%= form_for(resource, as: resource_name, url: user_avatar_create_path, html: { method: :post }) do |f| %>
+  <%= f.file_field :avatar %>
+
+  <%= f.submit 'Change Avatar' %>
+<% end %>
+
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
