--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
-<h1><%= current_user.username %>'s Shouts</h1>
+<%= user_avatar_profile(@user) %>
+
+<h1><%= @user.username %>'s Shouts</h1>
 
 <%= render @shouts %>
